--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.envoyproxy.controlplane</groupId>
     <artifactId>java-control-plane</artifactId>
-    <version>0.1.24-SNAPSHOT</version>
+    <version>0.1.25-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -29,10 +29,10 @@
         <auto-value.version>1.6.3</auto-value.version>
         <awaitility.version>3.1.6</awaitility.version>
         <checkstyle.version>8.18</checkstyle.version>
-        <grpc.version>1.22.1</grpc.version>
-        <guava.version>26.0-android</guava.version><!-- Keep the Guava version in sync with grpc-java -->
+        <grpc.version>1.29.0</grpc.version>
+        <guava.version>28.2-jre</guava.version><!-- Keep the Guava version in sync with grpc-java -->
         <junit.version>4.12</junit.version>
-        <protobuf.version>3.9.1</protobuf.version><!-- Keep the Protobuf version in sync with grpc-java -->
+        <protobuf.version>3.11.0</protobuf.version><!-- Keep the Protobuf version in sync with grpc-java -->
         <rest-assured.version>3.1.0</rest-assured.version>
         <slf4j.version>1.7.26</slf4j.version>
         <testcontainers.version>1.10.7</testcontainers.version>
