--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <artifactId>java-control-plane</artifactId>
-        <groupId>io.envoyproxy.controlplane</groupId>
+        <groupId>com.hubspot</groupId>
         <version>0.1.24-SNAPSHOT</version>
     </parent>
 
