--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
                     <doclint>accessibility,html,reference,syntax</doclint>
                     <keywords>true</keywords>
                     <version>false</version>
+                    <failOnError>false</failOnError>
                 </configuration>
                 <executions>
                     <execution>
