--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <artifactId>java-control-plane</artifactId>
-        <groupId>io.envoyproxy.controlplane</groupId>
+        <groupId>com.hubspot</groupId>
         <version>0.1.24-SNAPSHOT</version>
     </parent>
 
@@ -12,7 +12,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.envoyproxy.controlplane</groupId>
+            <groupId>com.hubspot</groupId>
             <artifactId>cache</artifactId>
             <version>0.1.24-SNAPSHOT</version>
         </dependency>
