--- a/.blazar.yaml
+++ b/.blazar.yaml
@@ -1,2 +1,8 @@
 env:
   MAVEN_ARGS: -DskipTests
+
+buildpack:
+  host: git.hubteam.com
+  organization: HubSpot
+  repository: Blazar-Buildpack-Java
+  branch: v2-single-module
