--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,18 @@
         <testcontainers.version>1.10.7</testcontainers.version>
 
         <!-- Maven Plugin Versions -->
+        <maven-failsafe-plugin.version>2.21.0</maven-failsafe-plugin.version>
+        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
+
+
+
+<!--        <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>-->
+<!--        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>-->
+<!--        <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>-->
+<!--        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>-->
+<!--        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>-->
+<!--        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>-->
+<!--        <versions-maven-plugin.version>2.7</versions-maven-plugin.version>-->
         <!-- Maven plugin versions -->
         <buildnumber.plugin.version>1.4</buildnumber.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
