try different buildpack branch

--- a/.blazar.yaml
+++ b/.blazar.yaml
@@ -5,4 +5,4 @@ buildpack:
   host: git.hubteam.com
   organization: HubSpot
   repository: Blazar-Buildpack-Java
-  branch: v2-single-module
+  branch: v2
